--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -12,11 +13,9 @@
       <div class="container">
        <div class="nav">
             <ul>
-              <a href="#"><li>Hello</li></a>
-               <a href="#"><li>About</li></a>
-               <a href="#"><li>Hello</li></a>
-               <a href="#"><li>Blog</li></a>
-               <a href="#"><li>Contact</li></a>
+              <a href="#"><li>Sign Up</li></a>
+               <a href="#"><li>Sign In</li></a>
+               <a href="#"><li>Help</li></a>
             </ul>
         </div>
         <div class="logo">
